// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container(AboutModal) should render 1`] = `
<Inject
  actionbar={
    Object {
      "actions": Object {
        "center": Array [
          Object {
            "actionId": "help:about:toggle",
            "label": "tdp-app:MORE",
            "onClick": [Function],
          },
        ],
      },
    }
  }
  component="Dialog"
  header="tdp-app:ABOUT_DIALOG_TITLE"
  onHide={[Function]}
  show={true}
  type="informative"
>
  <Icon
    className="about-logo"
    name="talend-tdp-colored"
  />
  <div
    className="about-excerpt"
  >
    <div>
      tdp-app:VERSION
      tdp-app:COLON
      mock version
    </div>
    <div>
      tdp-app:COPYRIGHT
    </div>
  </div>
</Inject>
`;

exports[`Container(AboutModal) should render in expanded mode 1`] = `
<Inject
  actionbar={
    Object {
      "actions": Object {
        "center": Array [
          Object {
            "actionId": "help:about:toggle",
            "label": "tdp-app:LESS",
            "onClick": [Function],
          },
        ],
      },
    }
  }
  component="Dialog"
  header="tdp-app:ABOUT_DIALOG_TITLE"
  onHide={[Function]}
  show={true}
  type="informative"
>
  <Icon
    className="about-logo"
    name="talend-tdp-colored"
  />
  <div
    className="about-excerpt"
  >
    <div>
      tdp-app:VERSION
      tdp-app:COLON
      mock version
    </div>
    <div>
      tdp-app:COPYRIGHT
    </div>
  </div>
  <table
    className="services-versions"
  >
    <tr>
      <th>
        tdp-app:SERVICE_NAME
      </th>
      <th>
        tdp-app:BUILD_ID
      </th>
      <th>
        tdp-app:VERSION
      </th>
    </tr>
    Immutable.List [
      <tr>
        <td />
        <td />
        <td />
      </tr>,
      <tr>
        <td />
        <td />
        <td />
      </tr>,
      <tr>
        <td />
        <td />
        <td />
      </tr>,
      <tr>
        <td />
        <td />
        <td />
      </tr>,
      <tr>
        <td />
        <td />
        <td />
      </tr>,
    ]
  </table>
</Inject>
`;
